feat$(tests): headers test

--- a/.babelrc
+++ b/.babelrc
@@ -4,8 +4,7 @@
     ["module-resolver", {
       "root": ["./src"],
       "alias": {
-        "test": "./test",
-        "underscore": "lodash"
+        "components": "./src/components"
       }
     }]
   ]
