--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "build": "babel src/ -d lib/",
     "prepublish": "yarn run build",
-    "test": "jest"
+    "test": "jest",
+    "flow": "flow-bin check"
   },
   "jest": {
     "verbose": true,
