--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markdown-builder",
-  "version": "0.8.3",
+  "version": "0.8.3-dev",
   "description": "The next-gen markdown builder for node",
   "main": "lib/index.js",
   "repository": "https://github.com/flxwu/markdown-builder",
